[package]
name = "short-debug"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = '''
Provides Debug derive that do same thing like std::fmt::Debug, but skips Option::None and Vec::is_empty fields
and prints inner values of without Some(..) wrappers
'''
homepage = "github.com/mrfoxpro/short-debug"
repository = "github.com/mrfoxpro/short-debug"

[lib]
name = "short_debug"
path = "lib.rs"
proc-macro = true

[dependencies]
synstructure = "0.13"
proc-macro2 = "1"
syn = "2"
quote = "1"
